--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
-    <string name="app_name">AndroidIntegration</string>
+    <string name="app_name">Integration SDK Test</string>
+    <string name="facebook_app_id">693680325291955</string>
+    <string name="facebook_client_token">cf537dad2b4422b3d7c09d50e83a590c</string>
+
+    <string name="coachmarkLabel_value_limit">%s/%s</string>
+    <string name="coachmarkNext">Next</string>
+    <string name="coachmarkSkip">Skip</string>
+
+    <string name="label_ini_label_coachMark_top">label coachMark top</string>
+    <string name="start">start</string>
+    <string name="end">end</string>
+    <string name="title_top">this is Top</string>
+    <string name="lorem_ipsum_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
+    <string name="title_start_top">this is start top</string>
+    <string name="label_finish">Finish</string>
+    <string name="title_end_top">this is end top</string>
+    <string name="title_end_bottom">this is end bottom</string>
+    <string name="title_start_bottom">this is start bottom</string>
+    <string name="title_bottom">this is bottom</string>
+    <string name="label_btn_explore">Ready To Explore</string>
 </resources>
